<resources>
    <string name="app_name">LIBRONET</string>
    <string name="logopic">logo</string>
    <string name="logoname">LIBRONET</string>
    <string name="getstarted_button">Get Started</string>
    <string name="logotext">Endless Books, One Digital Library.</string>
    <string name="continue_google">Continue With Google</string>
    <string name="loginpage_element1">loginpage_element</string>
    <string name="googleicon1">googleicon</string>
    <string name="alredy_have_account">I Already Have an Account</string>
    <string name="new_user">I am New</string>
    <string name="wellcomenote">Wellcome To Libronet</string>
    <string name="wellcome_sub_note">Books and knowladge,one tap away.</string>
    <string name="usernamebox1">Username</string>
    <string name="Emailbox2">Email</string>
    <string name="login_note">Lets Log In</string>
    <string name="login_sub_note">You Are One Step Ahead.</string>
    <string name="fogor_password">Fogot Password.</string>
    <string name="login_btn">Log In</string>
    <string name="page3_element">page3element</string>
    <string name="usernamebox3">Name</string>
    <string name="passwordbox4">Password</string>
    <string name="passwordbox5">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="logout_btn">Log Out</string>
    <string name="register_note">Create An Account</string>
    <string name="genere_btn">Explore By Genre</string>
    <string name="hpageb1">The Great GATSBY</string>
    <string name="hpageb2">The The Hunger Games</string>
    <string name="lang_btn">Explore By Language</string>
    <string name="author_btn">Explore By Author</string>
    <string name="prof_image1">prof_image</string>
    <string name="arrow_icon1">arrow_icon</string>
    <string name="book1">Harry Potter</string>
    <string name="book2">The Great Gatsby</string>
    <string name="book3">Ends With Us</string>
    <string name="book4">Hunger Games</string>
    <string name="book5">Robinson Crusoe</string>
    <string name="book6">David Copperfield</string>
    <string name="book7">Jane Eyre</string>
    <string name="book8">Good Soldire</string>
    <string name="author1">Jk Rowling</string>
    <string name="author2.5">Scott Fitzgerald</string>
    <string name="author2">Sir Arthur</string>
    <string name="author3">Enid Blyton</string>
    <string name="author5">Roald Dhal</string>
    <string name="heading_sub_note">And The Prisoner Of Azkaban.</string>
    <string name="heading_sub_note2">The Novel.</string>
    <string name="author_element">"Author     :"</string>
    <string name="language">"Language :"</string>
    <string name="genre">"Genre       :"</string>
    <string name="language1">English</string>
    <string name="genre1">Fantasy</string>
    <string name="genre2">Fiction</string>
    <string name="pages">"Pages       :"</string>
    <string name="pages1">317 pages</string>
    <string name="ratings">"Ratings     :"</string>
    <string name="rating1">4.9</string>
    <string name="read">Read</string>
    <string name="more_related">Readers Also Enjoying..</string>
    <string name="comments">Comments</string>
    <string name="comments1">comments1</string>
    <string name="comment_girl">Pumi Hansamali</string>
    <string name="comment_boy">Chandimal Jayasinghe</string>
    <string name="girl_comment">Completely engrossing🪄. The full series is a boom !</string>
    <string name="boy54_comment">Beautifully written.You are next level J.K Mam !</string>
    <string name="duration1">One Month Ago</string>
    <string name="duration2">Two Days Ago</string>
    <string name="Edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="name_prof">Akash De Alwis</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="email_prof">akashdelaiws@gmail.com</string>
    <string name="notification">Notifications</string>
    <string name="noti1">noti1</string>
    <string name="notify1">Enable Two Factor.</string>
    <string name="notify1_date">Today | 2.00pm.</string>
    <string name="notify1_sub">Update your authentication.secure your account.</string>
    <string name="notify2">Update available.</string>
    <string name="notify2_sub">Update 17.2.1 available.See the latest features.</string>
    <string name="notify2_date">1 day ago | 3.30pm.</string>
    <string name="notify3">Account setup successful</string>
    <string name="notify3_sub">Your account setup is successful.You can now enjoy your reading.</string>
    <string name="notify3_date">1 day ago | 8.00am.</string>
    <string name="notify4">New books available.</string>
    <string name="notify4_date">1 day ago | 4.30pm.</string>
    <string name="notify4_sub">New bunch of books are available now.Enjoy !</string>
    <string name="element3">element3</string>
    <string name="samll_logo">samll_logo</string>
    <string name="photo_element">photo_element</string>
    <string name="element04">element04</string>
    <string name="logo_short2">logo_short2</string>
    <string name="elemetpic3">elemetpic3</string>
    <string name="log_short04">log_short04</string>
    <string name="bookonclick1">bookonclick1</string>
    <string name="rating_starts">rating_starts</string>
    <string name="comment_element">comment_element</string>
    <string name="heart_react">heart_react</string>
</resources>