<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:backgroundTint="@color/bg_color"
    app:circularflow_defaultRadius="20dp"
    tools:context=".homepage" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="71dp"
        android:layout_height="54dp"
        android:contentDescription="@string/logopic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:srcCompat="@drawable/newlogo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="357dp"
        android:layout_height="64dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="@font/gabarito"
        android:text="@string/logoname"
        android:textColor="@color/main_text_color"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button8"
        android:layout_width="207dp"
        android:layout_height="38dp"
        android:backgroundTint="@color/primary_text_color"
        android:fontFamily="@font/gabarito"
        android:padding="2dp"
        android:paddingStart="15dp"
        android:text="@string/genere_btn"
        android:textAlignment="viewStart"
        android:textColor="@color/main_text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/arrow_icon1"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088"
        app:srcCompat="@drawable/rightarrow" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="121dp"
                android:layout_height="195dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/book1"
                app:srcCompat="@drawable/potter" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="120dp"
                android:layout_height="195dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/book2"
                app:srcCompat="@drawable/gastzby" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="121dp"
                android:layout_height="195dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/book3"
                app:srcCompat="@drawable/endsus" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="121dp"
                android:layout_height="195dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/book4"
                app:srcCompat="@drawable/hunger" />

        </LinearLayout>
    </HorizontalScrollView>

   <Button
        android:id="@+id/button9"
        android:layout_width="236dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/primary_text_color"
        android:fontFamily="@font/gabarito"
        android:padding="2dp"
        android:paddingStart="15dp"
        android:text="@string/lang_btn"
        android:textAlignment="viewStart"
        android:textColor="@color/main_text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/arrow_icon1"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.560"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385"
        app:srcCompat="@drawable/rightarrow" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_marginTop="358dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="121dp"
                android:layout_height="195dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/book5"
                app:srcCompat="@drawable/crusoe" />

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="120dp"
                android:layout_height="195dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/book6"
                app:srcCompat="@drawable/david" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="121dp"
                android:layout_height="195dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/book7"
                app:srcCompat="@drawable/jane" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="121dp"
                android:layout_height="195dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/book8"
                app:srcCompat="@drawable/goodsoldire" />

        </LinearLayout>
    </HorizontalScrollView>

    <Button
    android:id="@+id/button17"
    android:layout_width="236dp"
    android:layout_height="43dp"
    android:backgroundTint="@color/primary_text_color"
    android:fontFamily="@font/gabarito"
    android:padding="2dp"
    android:paddingStart="15dp"
    android:text="@string/author_btn"
    android:textAlignment="viewStart"
    android:textColor="@color/main_text_color"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.078"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.69"
    tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="53dp"
        android:layout_height="58dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boy" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/arrow_icon1"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682"
        app:srcCompat="@drawable/rightarrow" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView3"
        android:layout_marginTop="610dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView30"
                android:layout_width="121dp"
                android:layout_height="195dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/author1"
                app:srcCompat="@drawable/jk" />

            <ImageView
                android:id="@+id/imageView31"
                android:layout_width="120dp"
                android:layout_height="195dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/author2"
                app:srcCompat="@drawable/arthur" />

            <ImageView
                android:id="@+id/imageView32"
                android:layout_width="121dp"
                android:layout_height="195dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/author3"
                app:srcCompat="@drawable/enid" />

            <ImageView
                android:id="@+id/imageView33"
                android:layout_width="121dp"
                android:layout_height="195dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/author5"
                app:srcCompat="@drawable/roald" />

        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home"
        tools:ignore="MissingConstraints"
        app:layout_constraintVertical_bias="0.99"
        app:layout_constraintHorizontal_bias="0.50"/>

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        app:srcCompat="@drawable/user"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        app:srcCompat="@drawable/notification"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>