<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".page2">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="540dp"
        android:layout_height="675dp"
        android:layout_marginBottom="312dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/girl" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/loginpage_element1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/design"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="355dp"
        android:layout_height="72dp"
        android:backgroundTint="@color/primary_text_color"
        android:fontFamily="@font/gabarito"
        android:padding="10dp"
        android:text="@string/continue_google"
        android:textColor="@color/main_text_color"
        android:textSize="25sp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="36dp"
        android:layout_height="37dp"
        android:contentDescription="@string/googleicon1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758"
        app:srcCompat="@drawable/google" />

    <Button
        android:id="@+id/button3"
        android:layout_width="355dp"
        android:layout_height="72dp"
        android:backgroundTint="@color/primary_color"
        android:fontFamily="@font/gabarito"
        android:padding="10dp"
        android:text="@string/alredy_have_account"
        android:textColor="@color/main_text_color"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

    <Button
        android:id="@+id/button4"
        android:layout_width="355dp"
        android:layout_height="72dp"
        android:backgroundTint="@color/primary_text_color"
        android:fontFamily="@font/gabarito"
        android:padding="10dp"
        android:text="@string/new_user"
        android:textColor="@color/main_text_color"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="357dp"
        android:layout_height="64dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="@font/gabarito"
        android:text="@string/wellcomenote"
        android:textColor="@color/main_text_color"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="38dp"
        android:layout_height="34dp"
        android:contentDescription="@string/samll_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644"
        app:srcCompat="@drawable/newlogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="357dp"
        android:layout_height="64dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="@font/gabarito"
        android:text="@string/wellcome_sub_note"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>

